# tennet-afrr-archive

./: .gitignore  LICENSE  README.md  affr_data_fetcher.py  get_afrr.py  pyproject.toml
.github/workflows/: get_afrr.yml
data/2025-01-13/1545/: snapshot_1530_ttd_0.2h.parquet
data/2025-01-13/1600/: snapshot_1530_ttd_0.5h.parquet
data/2025-01-13/1615/: snapshot_1530_ttd_0.7h.parquet
data/2025-01-13/1630/: snapshot_1530_ttd_1.0h.parquet
data/2025-01-13/1645/: snapshot_1530_ttd_1.2h.parquet
data/2025-01-13/1700/: snapshot_1530_ttd_1.5h.parquet
data/2025-01-13/1715/: snapshot_1530_ttd_1.7h.parquet
data/2025-01-13/1730/: snapshot_1530_ttd_2.0h.parquet
data/2025-01-14/1145/: snapshot_1130_ttd_0.2h.parquet
data/2025-01-14/1200/: snapshot_1130_ttd_0.5h.parquet
data/2025-01-14/1215/: snapshot_1130_ttd_0.7h.parquet
data/2025-01-14/1230/: snapshot_1130_ttd_1.0h.parquet
data/2025-01-14/1245/: snapshot_1130_ttd_1.2h.parquet
data/2025-01-14/1300/: snapshot_1130_ttd_1.5h.parquet
data/2025-01-14/1315/: snapshot_1130_ttd_1.7h.parquet
data/2025-01-14/1330/: snapshot_1130_ttd_2.0h.parquet
data/2025-01-14/1430/: snapshot_1415_ttd_0.2h.parquet
data/2025-01-14/1445/: snapshot_1415_ttd_0.5h.parquet  snapshot_1430_ttd_0.2h.parquet
data/2025-01-14/1500/: snapshot_1415_ttd_0.7h.parquet  snapshot_1430_ttd_0.5h.parquet
data/2025-01-14/1515/: snapshot_1415_ttd_1.0h.parquet  snapshot_1430_ttd_0.7h.parquet
scripts/: afrr_daily_maintenance.sh  afrr_job.sh  delta_maintenance.py  migrate_legacy_to_delta.py  upload_backup_to_github.sh
(+972542 files in other folders)
