[project]
name = "tennet-afrr-archive"
version = "0.1.0"
description = "Downloading and storing the TenneT AFRR bid ladders at regular intervals "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "tenneteu-py>=0.1.2",
]
